cabal-version: >=1.10
name: jadas-journey
version: 0.1.0.0
author: Jonathan Strickland
maintainer: djanatyn@gmail.com
build-type: Simple
extra-source-files: README.md

executable jadas-journey
  ghc-options: -rtsopts -g -threaded -main-is Jada.Journey
  hs-source-dirs: src
  main-is: Jada/Journey.hs
  build-depends:
    base >=4.14 && <4.15,
    text,
    bytestring,
    megaparsec,
    parser-combinators,
    tweet-hs,
    dhall
  default-language: Haskell2010
