cabal-version: >=1.10
name: jadas-journey
version: 0.1.0.0
author: Jonathan Strickland
maintainer: djanatyn@gmail.com
build-type: Simple
extra-source-files: README.md

library
  ghc-options: -rtsopts -g -threaded
  hs-source-dirs: src
  exposed-modules: Jada.Journey
  build-depends:
    base >=4.14 && <4.15,
    text,
    bytestring,
    megaparsec,
    parser-combinators,
    tweet-hs,
    dhall,
    store,
    microlens
  default-language: Haskell2010

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -rtsopts -g -threaded -main-is Test
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
    base >=4.14 && <4.15,
    tasty,
    tasty-hunit,
    tweet-hs,
    megaparsec,
    microlens,
    jadas-journey
